[package]
name = "harvester"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["clock"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
maxminddb = "0.23"
mimalloc = "0.1.48"
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7.18"
url = "2.5"
urlencoding = "2.1.3"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"